--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Tworzymy funkcje</title>
+	<title>We are building functions in JavaScript</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Tworzymy funkcje</h1>
+	<h1>We are building functions in JavaScript</h1>
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
